syntax = "proto3";

// This package contains types used by the Raft storage backend that lives in
// the internal/storage/raft Go package.
package hashicorp.consul.internal.storage.raft;

import "annotations/ratelimit/ratelimit.proto";
import "google/protobuf/empty.proto";
import "pbresource/resource.proto";

// Forwarding service is used for forwarding write and consistent read
// operations to the Raft leader. It is served on Consul's multiplexed
// server port, which is the same port used for regular Raft traffic.
service Forwarding {
  // RoundTrip handles the forwarded operation.
  rpc RoundTrip(Request) returns (Response) {
    option (hashicorp.consul.internal.ratelimit.spec) = {
      operation_type: OPERATION_TYPE_EXEMPT,
      operation_category: OPERATION_CATEGORY_RESOURCE
    };
  }
}

// RequestType describes the type of operation being forwarded or written to
// the Raft log.
enum RequestType {
  REQUEST_TYPE_UNSPECIFIED = 0;
  REQUEST_TYPE_WRITE = 1;
  REQUEST_TYPE_DELETE = 2;
  REQUEST_TYPE_READ = 3;
  REQUEST_TYPE_LIST = 4;
}

// Request is used for two purposes:
//
//  1. For write and delete operations, Request will be protobuf-encoded and
//     written to the Raft log.
//  2. For all operations, Request will be used for forwarding to the leader.
message Request {
  RequestType type = 1;

  oneof request {
    WriteRequest write = 2;
    DeleteRequest delete = 3;
    ReadRequest read = 4;
    ListRequest list = 5;
  }
}

// Response contains the results of a Request.
message Response {
  oneof response {
    WriteResponse write = 1;
    google.protobuf.Empty delete = 2;
    ReadResponse read = 3;
    ListResponse list = 4;
  }
}

// WriteRequest contains the parameters for a write operation.
message WriteRequest {
  hashicorp.consul.resource.Resource resource = 1;
}

// WriteResponse contains the results of a write operation.
message WriteResponse {
  hashicorp.consul.resource.Resource resource = 1;
}

// DeleteRequest contains the parameters for a write operation.
message DeleteRequest {
  hashicorp.consul.resource.ID id = 1;
  string version = 2;
}

// ReadRequest contains the parameters for a consistent read operation.
message ReadRequest {
  hashicorp.consul.resource.ID id = 1;
}

// ReadResponse contains the results of a consistent read operation.
message ReadResponse {
  hashicorp.consul.resource.Resource resource = 1;
}

// ListRequest contains the parameters for a consistent list operation.
message ListRequest {
  hashicorp.consul.resource.Type type = 1;
  hashicorp.consul.resource.Tenancy tenancy = 2;
  string name_prefix = 3;
}

// ListResponse contains the results of a consistent list operation.
message ListResponse {
  repeated hashicorp.consul.resource.Resource resources = 1;
}

// GroupVersionMismatchErrorDetails contains the error details that will be
// returned when the leader encounters a storage.GroupVersionMismatchError.
message GroupVersionMismatchErrorDetails {
  hashicorp.consul.resource.Type requested_type = 1;
  hashicorp.consul.resource.Resource stored = 2;
}
